Updated the final notebook with the newest modeling and evaluated on test

--- a/final.ipynb
+++ b/final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "5ec7fe63",
    "metadata": {},
    "outputs": [],
@@ -16,17 +16,19 @@
     "\n",
     "# User defined methods\n",
     "#from wrangle import wrangle, wrangle_explore\n",
-    "from acquire import acquire,team_data_list\n",
-    "from prepare import prep\n",
+    "from acquire import acquire\n",
+    "from prepare import prepare\n",
     "import model\n",
     "#from functions import get_data_dictionary\n",
     "\n",
     "# Stats\n",
     "from scipy.stats import mannwhitneyu, wilcoxon\n",
     "from scipy.stats import levene\n",
+    "import scipy.stats as stats\n",
     "\n",
     "# Sklearn Modeling\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.tree import export_graphviz\n",
     "from sklearn.metrics import classification_report\n",
@@ -3980,22 +3982,111 @@
    "source": [
     "# Modeling\n",
     "\n",
-    "\n",
-    "    - Create a baseline\n",
+    "    - Prepare the data for modeling\n",
     "    - Split the data into X and y groups\n",
-    "    - No need for validate, using cross-validation in place of\n",
+    "    - Create a baseline\n",
     "    - Build RandomForestClassifier models\n",
-    "    - Evaluate the best one to use on our the test dataset."
+    "    - Evaluate the best one to use on our test dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec485a82",
+   "metadata": {},
+   "source": [
+    "### Prepare the Data For Modeling\n",
+    "\n",
+    "    Split the data into train and test sets and X and y groups. Select only the most useful columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "e7639999",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train, test = prep(acquire())"
+    "#Create train and test data sets\n",
+    "train, test = prepare(acquire())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3b30a67c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Now separate it into X and y groups\n",
+    "X_train, y_train = train.drop(columns = ['winningTeam']), train.winningTeam\n",
+    "X_test, y_test = test.drop(columns = ['winningTeam']), test.winningTeam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d5867ede",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['BlueTeamTotalGoldDifference', 'BlueTeamLevelDifference',\n",
+       "       'BlueTeamXpDifference', 'BlueTeamWardDifference',\n",
+       "       'BlueTeamminionKillDifference', 'BlueTeamDeathsDifference',\n",
+       "       'BlueTeamMagicDmgDifference', 'BlueTeamPhysicalDmgDifference',\n",
+       "       'BlueTeamTrueDmgDifference', 'BlueTeamTotalDmgDifference',\n",
+       "       'BlueTeamTotalMinionsMonstersDifference', 'BlueTeamTimeCCingDifference',\n",
+       "       'BlueTeamWaterDragonDifference', 'BlueTeamAirDragonDifference',\n",
+       "       'BlueTeamChemtechDragonDifference', 'BlueTeamFireDragonDifference',\n",
+       "       'BlueTeamHextechDragonDifference', 'BlueTeamEarthDragonDifference',\n",
+       "       'BlueTeamKdaDifference'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Select only the columns that indicate differnces between blue and red team stats\n",
+    "cols_to_keep = X_train.columns[(X_train.columns.str.contains('Blue')) & (X_train.columns.str.contains('Difference')) & (X_train.columns.str.contains('Team'))]\n",
+    "cols_to_keep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ea4eb8a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#The following line of code selects all rows, but only the columns listed above\n",
+    "X_train = X_train.loc[:, cols_to_keep]\n",
+    "X_test = X_test.loc[:, cols_to_keep]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e26482d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3890, 19), (973, 19))"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#What is the shape of our datasets?\n",
+    "X_train.shape, X_test.shape"
    ]
   },
   {
@@ -4010,31 +4101,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "7bf8339b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "200.0    3649\n",
-       "100.0    3369\n",
+       "200.0    2017\n",
+       "100.0    1873\n",
        "Name: winningTeam, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Which team has the most wins? Team 200.0\n",
+    "# Which team has the most wins? Team 200.0 (Red Team)\n",
     "y_train.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "98245c69",
    "metadata": {},
    "outputs": [
@@ -4042,96 +4133,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Baseline accuracy score is: 51.995%\n"
+      "Baseline accuracy score is: 51.851%\n"
      ]
     }
    ],
    "source": [
     "# The following function call creates the baseline, returns the model, and prints the accuracy\n",
     "baseline_model = model.baseline_acc(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83218d21",
-   "metadata": {},
-   "source": [
-    "### Split Into X and y Groups"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "1051722d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#X group = features, y group = target\n",
-    "X_train, y_train = train.drop(columns = ['winningTeam']), train.winningTeam"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "815a613a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#X group = features, y group = target\n",
-    "X_test, y_test = train.drop(columns = ['winningTeam']), test.winningTeam"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "308b82d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((7018, 226), (7018,))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Verify they are the same length\n",
-    "X_train.shape, y_train.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "549a4868",
-   "metadata": {},
-   "source": [
-    "### Create Train and Test Sets\n",
-    "\n",
-    "    We will not need a validate dataset since we are utilizing cross-validation. The following line of code will set aside 20% of the data for testing."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "1046469d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((7018, 227), (1755, 227))"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.shape, test.shape"
    ]
   },
   {
@@ -4146,7 +4154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "47b952c4",
    "metadata": {},
    "outputs": [],
@@ -4160,7 +4168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "de963f48",
    "metadata": {},
    "outputs": [
@@ -4168,9 +4176,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Cross-Validated Accuracy:  0.9665\n",
-      "Max Depth:  10\n",
-      "Min Samples Per Leaf:  1\n"
+      "Mean Cross-Validated Accuracy:  0.6355\n",
+      "Max Depth:  7\n",
+      "Min Samples Per Leaf:  7\n"
      ]
     }
    ],
@@ -4188,10 +4196,10 @@
     "__Best Model Takeaways__\n",
     "\n",
     "    - Random Forest Classifier\n",
-    "    - Mean Cross-Validated Accuracy: 96.64%\n",
-    "    - Outperformed Baseline by 42%\n",
-    "    - Max Depth: 8\n",
-    "    - Minimum Samples Per Leaf: 3"
+    "    - Mean Cross-Validated Accuracy: 63.55%\n",
+    "    - Outperformed Baseline by 12%\n",
+    "    - Max Depth: 7\n",
+    "    - Minimum Samples Per Leaf: 7"
    ]
   },
   {
@@ -4204,7 +4212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "ce761af1",
    "metadata": {},
    "outputs": [
@@ -4234,64 +4242,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>towers_lost_team200</th>\n",
-       "      <td>0.130038</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>towers_lost_team100</th>\n",
-       "      <td>0.108488</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>inhibs_lost_team100</th>\n",
-       "      <td>0.103690</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>inhibs_lost_team200</th>\n",
-       "      <td>0.100154</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RedTeamTotalGoldDifference</th>\n",
-       "      <td>0.063801</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>BlueTeamTotalGoldDifference</th>\n",
-       "      <td>0.039338</td>\n",
+       "      <td>0.168818</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>baron_team100</th>\n",
-       "      <td>0.038704</td>\n",
+       "      <th>BlueTeamXpDifference</th>\n",
+       "      <td>0.146776</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>baron_team200</th>\n",
-       "      <td>0.034678</td>\n",
+       "      <th>BlueTeamTotalDmgDifference</th>\n",
+       "      <td>0.104916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>RedTeamTotalGold</th>\n",
-       "      <td>0.026388</td>\n",
+       "      <th>BlueTeamKdaDifference</th>\n",
+       "      <td>0.080874</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>dragon_team200</th>\n",
-       "      <td>0.023356</td>\n",
+       "      <th>BlueTeamTotalMinionsMonstersDifference</th>\n",
+       "      <td>0.080068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BlueTeamDeathsDifference</th>\n",
+       "      <td>0.062566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BlueTeamMagicDmgDifference</th>\n",
+       "      <td>0.053866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BlueTeamPhysicalDmgDifference</th>\n",
+       "      <td>0.051670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BlueTeamTrueDmgDifference</th>\n",
+       "      <td>0.049057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BlueTeamTimeCCingDifference</th>\n",
+       "      <td>0.048864</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    0\n",
-       "towers_lost_team200          0.130038\n",
-       "towers_lost_team100          0.108488\n",
-       "inhibs_lost_team100          0.103690\n",
-       "inhibs_lost_team200          0.100154\n",
-       "RedTeamTotalGoldDifference   0.063801\n",
-       "BlueTeamTotalGoldDifference  0.039338\n",
-       "baron_team100                0.038704\n",
-       "baron_team200                0.034678\n",
-       "RedTeamTotalGold             0.026388\n",
-       "dragon_team200               0.023356"
+       "                                               0\n",
+       "BlueTeamTotalGoldDifference             0.168818\n",
+       "BlueTeamXpDifference                    0.146776\n",
+       "BlueTeamTotalDmgDifference              0.104916\n",
+       "BlueTeamKdaDifference                   0.080874\n",
+       "BlueTeamTotalMinionsMonstersDifference  0.080068\n",
+       "BlueTeamDeathsDifference                0.062566\n",
+       "BlueTeamMagicDmgDifference              0.053866\n",
+       "BlueTeamPhysicalDmgDifference           0.051670\n",
+       "BlueTeamTrueDmgDifference               0.049057\n",
+       "BlueTeamTimeCCingDifference             0.048864"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4323,17 +4331,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "da2d02a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier(max_depth=10, random_state=123)"
+       "RandomForestClassifier(max_depth=7, min_samples_leaf=7, random_state=123)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4353,16 +4361,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "889a1061",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6115107913669064"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#The following code will score our best model on the unseen test data\n",
+    "best_model.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8dc8b01a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#The following code will score our best model on the unseen test data\n",
-    "\n",
-    "#Remove this comment and uncomment the following line of code only when ready for testing!\n",
-    "\n",
-    "#best_model.score(X_test, y_test)"
+    "#The following line of code will generate predictions on the X_test data.\n",
+    "#These predictions will be used in the evaluation functions below\n",
+    "y_preds = best_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5cd41478",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tpr': 0.42857142857142855,\n",
+       " 'tnr': 0.4722689075630252,\n",
+       " 'fpr': 0.5277310924369748,\n",
+       " 'fnr': 0.5714285714285714}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#The following line of code prints out true positive rate, true negative rate,\n",
+    "#false positive rate, and false negative rate.\n",
+    "model.cmatrix(y_test, y_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ce106572",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "   Blue Team       0.63      0.57      0.60       497\n",
+      "    Red Team       0.59      0.66      0.62       476\n",
+      "\n",
+      "    accuracy                           0.61       973\n",
+      "   macro avg       0.61      0.61      0.61       973\n",
+      "weighted avg       0.61      0.61      0.61       973\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#The following line of code prints out the classification report\n",
+    "#It includes information like precision, recall, and f1-score\n",
+    "print(classification_report(y_test, y_preds, target_names = ['Blue Team', 'Red Team']))"
    ]
   },
   {
@@ -4372,22 +4454,21 @@
    "source": [
     "### Conclusion\n",
     "\n",
-    "    Our random forest classifier model accuracy average using cross validation was roughly 97% beating our baseline accuracy by 42%.\n",
+    "    Our random forest classifier model accuracy average using cross validation was roughly 61% beating our baseline accuracy by 10%.\n",
     "    \n",
-    "    Our model confirmed that our original hypothesis of 'TeamWards' being the biggest driver of win rates was incorrect.  Our models feature importance concluded that 'towers_lost' was the biggest driver in predicting win rates. \n",
+    "    Our model confirmed that our original hypothesis of 'TeamWards' being the biggest driver of win rates was incorrect. Our model's feature importance concluded that 'BlueTeamTotalGoldDifference' was the biggest driver in predicting win rates at the 10 minute mark. \n",
     "    \n",
-    "    Our model identified the most important features as:\n",
+    "    Our model identified the top 5 most important features as:\n",
     "        \n",
-    "        'towers_lost_'\n",
-    "        'inhibs_lost_team200'\n",
-    "        'baron_team100'\n",
-    "        'dragon_team100'\n",
-    "        'team_totalGold_100'\n",
-    "        'team_xp_100'\n",
+    "        'BlueTeamTotalGoldDifference'\n",
+    "        'BlueTeamXpDifference\n",
+    "        'BlueTeamTotalDmgDifference'\n",
+    "        'BlueTeamKdaDifference'\n",
+    "        'BlueTeamTotalMinionsMonstersDifference'\n",
     "        \n",
     "    If we had more time we would have liked to:\n",
     "    \n",
-    "        - run our model on non-pro games & see if 'towers_lost' is still the biggest driver for predicting win rates\n",
+    "        - run our model on non-pro games & see if 'BlueTeamTotalGoldDifference' is still the biggest driver for predicting win rates\n",
     "        - dive deeper into what are the drivers for gaining towers\n",
     "        - engineer more features\n",
     "        - predict a winner at a much earlier time than 10 min into a game\n",
@@ -4474,7 +4555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
