--- a/jared/scratch_notebook-Copy3.ipynb
+++ b/jared/scratch_notebook-Copy3.ipynb
@@ -2025,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 1,
    "id": "c2bf43f9",
    "metadata": {},
    "outputs": [],
@@ -2066,6 +2066,7 @@
     "    df['RedMidKda'] = df.killsplayer_8 * 1.25 + (df.assistsplayer_8 * .75) - df.deathsplayer_8\n",
     "    df['RedBotKda'] = df.killsplayer_9 * 1.25 + (df.assistsplayer_9 * .75) - df.deathsplayer_9\n",
     "    df['RedSupportKda'] = (df.killsplayer_10 * 1.25 + (df.assistsplayer_10 * .75)) - df.deathsplayer_10\n",
+    "    df['BlueTeamKda'] = mean(df.BlueTopKda + df.BlueJungleKda + df.BlueMidKda + df.BlueBotKda + df.BlueSupportKda)\n",
     "    df['BlueTeamKdaDifference'] = (((df.BlueTeamKills * 1.25 + (df.BlueTeamAssists * .75)) - df.BlueTeamDeaths) - \n",
     "                                   (df.RedTeamKills * 1.25 + (df.RedTeamAssists * .75) - df.RedTeamDeaths))\n",
     "    df['BlueJungleGankHeavy'] = (df.killsplayer_2 * 1000000) - (df.jungleMinionsKilled_2)\n",
