Updated modeling section

--- a/final.ipynb
+++ b/final.ipynb
@@ -2,23 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "5ec7fe63",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'env'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-9521a91d5e94>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# User defined methods\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m#from wrangle import wrangle, wrangle_explore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0macquire\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0macquire\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mteam_data_list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mprepare\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/codeup-data-science/eSport-Analysis-League-of-Legends/acquire.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mbs4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0menv\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mapi_key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'env'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Standard Data Science Utility Belt\n",
     "import pandas as pd\n",
@@ -29,7 +16,7 @@
     "\n",
     "# User defined methods\n",
     "#from wrangle import wrangle, wrangle_explore\n",
-    "from acquire import acquire,team_data_list\n",
+    "from acquire import acquire\n",
     "import prepare\n",
     "import model\n",
     "import env\n",
@@ -38,6 +25,7 @@
     "# Stats\n",
     "from scipy.stats import mannwhitneyu, wilcoxon\n",
     "from scipy.stats import levene\n",
+    "import scipy.stats as stats\n",
     "\n",
     "# Sklearn Modeling\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -4024,22 +4012,101 @@
    "source": [
     "# Modeling\n",
     "\n",
-    "\n",
-    "    - Create a baseline\n",
+    "    - Prepare the data for modeling\n",
     "    - Split the data into X and y groups\n",
-    "    - No need for validate, using cross-validation in place of\n",
+    "    - Create a baseline\n",
     "    - Build RandomForestClassifier models\n",
     "    - Evaluate the best one to use on our the test dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "e7639999",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train, test = prep(acquire())"
+    "#Load and prepare the data for modeling\n",
+    "train, test = prepare.prepare(acquire())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1216c094",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Split the data into X and y groups\n",
+    "X_train, y_train = train.drop(columns = ['winningTeam']), train.winningTeam\n",
+    "X_test, y_test = test.drop(columns = ['winningTeam']), test.winningTeam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "072e4d00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['BlueTeamTotalGoldDifference', 'BlueTeamLevelDifference',\n",
+       "       'BlueTeamXpDifference', 'BlueTeamWardDifference',\n",
+       "       'BlueTeamminionKillDifference', 'BlueTeamDeathsDifference',\n",
+       "       'BlueTeamMagicDmgDifference', 'BlueTeamPhysicalDmgDifference',\n",
+       "       'BlueTeamTrueDmgDifference', 'BlueTeamTotalDmgDifference',\n",
+       "       'BlueTeamTotalMinionsMonstersDifference', 'BlueTeamTimeCCingDifference',\n",
+       "       'BlueTeamWaterDragonDifference', 'BlueTeamAirDragonDifference',\n",
+       "       'BlueTeamChemtechDragonDifference', 'BlueTeamFireDragonDifference',\n",
+       "       'BlueTeamHextechDragonDifference', 'BlueTeamEarthDragonDifference',\n",
+       "       'BlueTeamKdaDifference'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Select only the blue team features that indicate differences\n",
+    "cols_to_keep = X_train.columns[(X_train.columns.str.contains('Blue')) & (X_train.columns.str.contains('Difference')) & (X_train.columns.str.contains('Team'))]\n",
+    "cols_to_keep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "18b8125b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Only use the above features in the train and test data sets\n",
+    "X_train = X_train.loc[:, cols_to_keep]\n",
+    "X_test = X_test.loc[:, cols_to_keep]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9f010fe5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3890, 19), (973, 19))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#What are the shapes of our train and test data sets?\n",
+    "X_train.shape, X_test.shape"
    ]
   },
   {
@@ -4054,31 +4121,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "7bf8339b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "200.0    3649\n",
-       "100.0    3369\n",
+       "200.0    2017\n",
+       "100.0    1873\n",
        "Name: winningTeam, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Which team has the most wins? Team 200.0\n",
+    "# Which team has the most wins? Team 200.0 (Red Team)\n",
     "y_train.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "98245c69",
    "metadata": {},
    "outputs": [
@@ -4086,96 +4153,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Baseline accuracy score is: 51.995%\n"
+      "Baseline accuracy score is: 51.851%\n"
      ]
     }
    ],
    "source": [
     "# The following function call creates the baseline, returns the model, and prints the accuracy\n",
     "baseline_model = model.baseline_acc(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83218d21",
-   "metadata": {},
-   "source": [
-    "### Split Into X and y Groups"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "1051722d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#X group = features, y group = target\n",
-    "X_train, y_train = train.drop(columns = ['winningTeam']), train.winningTeam"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "815a613a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#X group = features, y group = target\n",
-    "X_test, y_test = train.drop(columns = ['winningTeam']), test.winningTeam"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "308b82d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((7018, 226), (7018,))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Verify they are the same length\n",
-    "X_train.shape, y_train.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "549a4868",
-   "metadata": {},
-   "source": [
-    "### Create Train and Test Sets\n",
-    "\n",
-    "    We will not need a validate dataset since we are utilizing cross-validation. The following line of code will set aside 20% of the data for testing."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "1046469d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((7018, 227), (1755, 227))"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.shape, test.shape"
    ]
   },
   {
@@ -4190,7 +4174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "47b952c4",
    "metadata": {},
    "outputs": [],
@@ -4204,7 +4188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "de963f48",
    "metadata": {},
    "outputs": [
@@ -4212,9 +4196,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Cross-Validated Accuracy:  0.9665\n",
-      "Max Depth:  10\n",
-      "Min Samples Per Leaf:  1\n"
+      "Mean Cross-Validated Accuracy:  0.6355\n",
+      "Max Depth:  7\n",
+      "Min Samples Per Leaf:  7\n"
      ]
     }
    ],
@@ -4232,10 +4216,10 @@
     "__Best Model Takeaways__\n",
     "\n",
     "    - Random Forest Classifier\n",
-    "    - Mean Cross-Validated Accuracy: 96.64%\n",
-    "    - Outperformed Baseline by 42%\n",
-    "    - Max Depth: 8\n",
-    "    - Minimum Samples Per Leaf: 3"
+    "    - Mean Cross-Validated Accuracy: 63.55%\n",
+    "    - Outperformed Baseline by 12%\n",
+    "    - Max Depth: 7\n",
+    "    - Minimum Samples Per Leaf: 7"
    ]
   },
   {
@@ -4248,7 +4232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "ce761af1",
    "metadata": {},
    "outputs": [
@@ -4278,64 +4262,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>towers_lost_team200</th>\n",
-       "      <td>0.130038</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>towers_lost_team100</th>\n",
-       "      <td>0.108488</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>inhibs_lost_team100</th>\n",
-       "      <td>0.103690</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>inhibs_lost_team200</th>\n",
-       "      <td>0.100154</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RedTeamTotalGoldDifference</th>\n",
-       "      <td>0.063801</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>BlueTeamTotalGoldDifference</th>\n",
-       "      <td>0.039338</td>\n",
+       "      <td>0.168818</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>baron_team100</th>\n",
-       "      <td>0.038704</td>\n",
+       "      <th>BlueTeamXpDifference</th>\n",
+       "      <td>0.146776</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>baron_team200</th>\n",
-       "      <td>0.034678</td>\n",
+       "      <th>BlueTeamTotalDmgDifference</th>\n",
+       "      <td>0.104916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>RedTeamTotalGold</th>\n",
-       "      <td>0.026388</td>\n",
+       "      <th>BlueTeamKdaDifference</th>\n",
+       "      <td>0.080874</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>dragon_team200</th>\n",
-       "      <td>0.023356</td>\n",
+       "      <th>BlueTeamTotalMinionsMonstersDifference</th>\n",
+       "      <td>0.080068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BlueTeamDeathsDifference</th>\n",
+       "      <td>0.062566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BlueTeamMagicDmgDifference</th>\n",
+       "      <td>0.053866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BlueTeamPhysicalDmgDifference</th>\n",
+       "      <td>0.051670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BlueTeamTrueDmgDifference</th>\n",
+       "      <td>0.049057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BlueTeamTimeCCingDifference</th>\n",
+       "      <td>0.048864</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    0\n",
-       "towers_lost_team200          0.130038\n",
-       "towers_lost_team100          0.108488\n",
-       "inhibs_lost_team100          0.103690\n",
-       "inhibs_lost_team200          0.100154\n",
-       "RedTeamTotalGoldDifference   0.063801\n",
-       "BlueTeamTotalGoldDifference  0.039338\n",
-       "baron_team100                0.038704\n",
-       "baron_team200                0.034678\n",
-       "RedTeamTotalGold             0.026388\n",
-       "dragon_team200               0.023356"
+       "                                               0\n",
+       "BlueTeamTotalGoldDifference             0.168818\n",
+       "BlueTeamXpDifference                    0.146776\n",
+       "BlueTeamTotalDmgDifference              0.104916\n",
+       "BlueTeamKdaDifference                   0.080874\n",
+       "BlueTeamTotalMinionsMonstersDifference  0.080068\n",
+       "BlueTeamDeathsDifference                0.062566\n",
+       "BlueTeamMagicDmgDifference              0.053866\n",
+       "BlueTeamPhysicalDmgDifference           0.051670\n",
+       "BlueTeamTrueDmgDifference               0.049057\n",
+       "BlueTeamTimeCCingDifference             0.048864"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4367,17 +4351,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "da2d02a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier(max_depth=10, random_state=123)"
+       "RandomForestClassifier(max_depth=7, min_samples_leaf=7, random_state=123)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4397,16 +4381,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "889a1061",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6115107913669064"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#The following code will score our best model on the unseen test data\n",
+    "best_model.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "387a3375",
+   "metadata": {},
+   "source": [
+    "__Get Predictions__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "dd0e4125",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#The following code will score our best model on the unseen test data\n",
-    "\n",
-    "#Remove this comment and uncomment the following line of code only when ready for testing!\n",
-    "\n",
-    "#best_model.score(X_test, y_test)"
+    "test_preds = best_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e78120b2",
+   "metadata": {},
+   "source": [
+    "__Classification Report__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "aada70b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "   Blue Team       0.63      0.57      0.60       497\n",
+      "    Red Team       0.59      0.66      0.62       476\n",
+      "\n",
+      "    accuracy                           0.61       973\n",
+      "   macro avg       0.61      0.61      0.61       973\n",
+      "weighted avg       0.61      0.61      0.61       973\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#The following prints a report containing information like precision, recall, and f1-score\n",
+    "print(classification_report(y_test, test_preds, target_names=['Blue Team', 'Red Team']))"
    ]
   },
   {
@@ -4416,22 +4461,23 @@
    "source": [
     "### Conclusion\n",
     "\n",
-    "    Our random forest classifier model accuracy average using cross validation was roughly 97% beating our baseline accuracy by 42%.\n",
+    "    Our random forest classifier model mean cross-validated accuracy was roughly 63% beating our baseline accuracy by 12%.\n",
     "    \n",
-    "    Our model confirmed that our original hypothesis of 'TeamWards' being the biggest driver of win rates was incorrect.  Our models feature importance concluded that 'towers_lost' was the biggest driver in predicting win rates. \n",
+    "    Evaluating our best model on the test data set resulted in an accuracy of about 61%.\n",
+    "    \n",
+    "    Our model confirmed that our original hypothesis of 'TeamWards' being the biggest driver of win rates was incorrect.  Our models feature importance concluded that 'BlueTeamGoldDifference' was the biggest driver in predicting win rates. \n",
     "    \n",
     "    Our model identified the most important features as:\n",
     "        \n",
-    "        'towers_lost_'\n",
-    "        'inhibs_lost_team200'\n",
-    "        'baron_team100'\n",
-    "        'dragon_team100'\n",
-    "        'team_totalGold_100'\n",
-    "        'team_xp_100'\n",
+    "        'BlueTeamTotalGoldDifference'\n",
+    "        'BlueTeamXpDifference'\n",
+    "        'BlueTeamTotalDmgDifference'\n",
+    "        'BlueTeamKdaDifference'\n",
+    "        'BlueTeamTotalMinionsMonstersDifference'\n",
     "        \n",
     "    If we had more time we would have liked to:\n",
     "    \n",
-    "        - run our model on non-pro games & see if 'towers_lost' is still the biggest driver for predicting win rates\n",
+    "        - run our model on non-pro games & see if 'BlueTeamGoldDifference' is still the biggest driver for predicting win rates\n",
     "        - dive deeper into what are the drivers for gaining towers\n",
     "        - engineer more features\n",
     "        - predict a winner at a much earlier time than 10 min into a game\n",
@@ -4518,7 +4564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
